tests/interpreter/while-statement-test-expr-not-boolean.lox
while 1 {
    y;
}
